# Vertex-Cover-Optimization

./: CMakeLists.txt  README.md  check.sh  submission.sh
samples/: one.in
src/: dr.cpp  dr.h  graph.cpp  graph.h  lb.cpp  lb.h  main.cpp  ub.cpp  ub.h
vc/: README.md  checker.py  chk.py
